system/clusters/creodias/resource-management/bucket-operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bucket-operator
  namespace: rm
  labels:
    app.kubernetes.io/instance: bucket-operator
    app.kubernetes.io/name: bucket-operator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bucket-operator
    app.kubernetes.io/name: bucket-operator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
